# Sogl-Engine

./: CMakeLists.txt  README  README.md  imgui.ini
assets/models/: cBox.blend  cBox.blend1  cBox.glb  plane.glb  simpleCube.glb  sphere.glb  testScene.blend  testScene.blend1  testScene.glb
assets/shaders/: default.frag  default.vert  default_shadow.frag  lighting.frag  render_cube.vert  ssao.frag  ssao_blur.frag
assets/shaders/bloom/: downsample.frag  upsample.frag
assets/shaders/default/: default.frag  default_shadow.vert  default_transparent.frag  default_transparent.vert
assets/shaders/lighting/: pbr.frag  pbr.vert
assets/shaders/postprocessing/: pp.frag
assets/shaders/skybox/: brdflut_gen.frag  brdflut_gen.vert  diffuse_irradiance.frag  irradianceShader.frag  prefilter.frag  skybox_render.frag  skybox_render.vert
assets/shaders/ssao/: ssao.frag
shaders/: default.frag
src/: main.cpp
src/engine/: sogl_camera.cpp  sogl_camera.hpp  sogl_engine.cpp  sogl_engine.hpp  sogl_game_object.cpp  sogl_game_object.hpp  sogl_lights.hpp  sogl_mesh_object.cpp  sogl_mesh_object.hpp
src/engine/env/: sogl_camera.cpp  sogl_camera.hpp  sogl_lights.hpp
src/engine/game/: sogl_game_object.cpp  sogl_game_object.hpp  sogl_mesh_object.cpp  sogl_mesh_object.hpp
src/renderer/: sogl_render_structs.hpp  sogl_renderer.cpp  sogl_renderer.hpp  sogl_window.cpp  sogl_window.hpp
src/renderer/modules/: sogl_bloom_module.cpp  sogl_bloom_module.hpp  sogl_lighting_module.cpp  sogl_lighting_module.hpp  sogl_pp_module.cpp  sogl_pp_module.hpp  sogl_skybox_module.cpp  sogl_skybox_module.hpp  (+2 more)
src/util/: sogl_camera_controller.cpp  sogl_camera_controller.hpp  sogl_helper.cpp  sogl_helper.hpp  sogl_model_loader.cpp  sogl_model_loader.hpp  sogl_program_manager.cpp  sogl_program_manager.hpp  sogl_shader.cpp  sogl_shader_loader.hpp  sogl_shader_manager.cpp  sogl_shader_manager.hpp
(+4 files in other folders)
